--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,32 +1,16 @@
 nav.mobile.fixed {
-  mat-toolbar {
-    height: 48px;
-    transition: height 0.2s;
-
-    mat-icon {
-      opacity: 1;
-    }
+  button {
+    top: 12px;
   }
 }
 
 nav.mobile {
-  mat-toolbar {
-    background-color: transparent;
-    color: var(--white);
-    display: flex;
-    height: 0;
-    justify-content: flex-end;
-    padding: 0;
+  button {
     position: fixed;
-    right: 0;
-    top: 0;
-    transition: height 0.3s;
-    width: 100%;
-    z-index: 1;
-
-    mat-icon {
-      opacity: 0;
-    }
+    top: -52px;
+    right: 12px;
+    padding: 8px;
+    transition: top 0.3s;
   }
 }
 
@@ -139,7 +123,8 @@ nav.desktop {
 
   img {
     border: 1px solid var(--off-white);
-    margin-top: 15px;
+    cursor: pointer;
+    margin-bottom: 15px;
     max-height: 300px;
     width: auto;
   }
