Additional content pop and misc style updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -272,8 +272,8 @@
         [title]="'Projects'"
         [titleBlurb]="'Web Apps I\'ve worked on'"
       ></app-section-header>
-      <div class="content">
-        <div class="sub-section">
+      <div class="sub-section">
+        <div class="content">
           <h2>
             <a
               href="https://bull-search-web-dev.azurewebsites.net"
@@ -291,20 +291,9 @@
               management. The UI and UX was designed by
               <a href="https://centricconsulting.com/" target="_blank"
                 >Centric Consulting</a
-              >, who I highly recommend. I had the pleasure of collaborating
-              with
-              <a href="https://www.linkedin.com/in/timzeller" target="_blank"
-                >Tim Zeller</a
-              >
-              and
-              <a
-                href="https://www.linkedin.com/in/raysa-suarez-61ba47122"
-                target="_blank"
-                >Raysa Suarez</a
-              >
-              during feedback sessions. Ultimately, I created a one-to-one
-              implementation of the UI, UX, and functionality using a mobile
-              first strategy.
+              >, who I had the pleasure of collaborating with. Ultimately, I
+              created a one-to-one implementation of the UI, UX, and
+              functionality using a mobile first strategy.
             </div>
             <!-- .col -->
             <ng-template
@@ -337,8 +326,11 @@
           </div>
           <!-- .row -->
         </div>
-        <!-- .sub-section -->
-        <div class="sub-section">
+        <!-- .content -->
+      </div>
+      <!-- .sub-section -->
+      <div class="sub-section">
+        <div class="content bg-off-white">
           <h2>
             <a href="http://www.accelgen.com" target="_blank"
               >Accelerated Genetics</a
@@ -346,10 +338,8 @@
           </h2>
           <div class="row">
             <div class="col-md-12 col-lg-4">
-              I inherited this website when I joined Accelerated Genetics, about
-              five years ago, and I was given the task of redesigning the UI/UX,
-              architecture, and SEO. I also closed security holes such as
-              SQL-injection and improved query performance.
+              I was given the task of redesigning the UI, UX, architecture, and
+              SEO. I also closed security holes and improved query performance.
             </div>
             <!-- .col -->
             <ng-template
@@ -382,15 +372,18 @@
           </div>
           <!-- .row -->
         </div>
-        <!-- .sub-section -->
-        <div class="sub-section">
+        <!-- .content -->
+      </div>
+      <!-- .sub-section -->
+      <div class="sub-section">
+        <div class="content">
           <h2>
             <a href="http://search.accelgen.com" target="_blank">Sire Search</a>
           </h2>
           <div class="row">
             <div class="col-md-12 col-lg-4">
-              I created this Angular project, designed and implemented its UI
-              and UX, and setup the Redux state management.
+              I designed and implemented its UI and UX. I also setup the state
+              management using Redux.
             </div>
             <!-- .col -->
             <ng-template
@@ -423,17 +416,25 @@
           </div>
           <!-- .row -->
         </div>
-        <!-- .sub-section -->
-        <div class="sub-section">
+        <!-- .content -->
+      </div>
+      <!-- .sub-section -->
+      <div class="sub-section">
+        <div class="content bg-off-white">
           <h2>
             <a href="https://shop.accelgen.com" target="_blank">Shop</a>
           </h2>
           <div class="row">
             <div class="col-md-12 col-lg-6">
-              This is an ecommerce website where I was tasked to design and
-              heavily draw inspiration from Select Sires Beef. I created and
-              implemented all functionality, including connecting to the
-              WindRiver API for credit card processing.
+              I adapted the UI from
+              <a href="https://selectsiresbeef.com" target="_blank"
+                >Select Sires Beef</a
+              >. It's written in ASP.NET C# and uses JavaScript to communicate
+              with the
+              <a href="https://www.windriverfinancial.com" target="_blank"
+                >WindRiver</a
+              >
+              API.
             </div>
             <!-- .col -->
             <ng-template
@@ -454,15 +455,22 @@
           </div>
           <!-- .row -->
         </div>
-        <!-- .sub-section -->
-        <div class="sub-section">
+        <!-- .content -->
+      </div>
+      <!-- .sub-section -->
+      <div class="sub-section">
+        <div class="content">
           <h2>
             <a href="https://dss.selectsires.com/" target="_blank"
               >Dairy Sire Search</a
             >
           </h2>
           <div class="row">
-            <div class="col-md-12 col-lg-6">DSS Description</div>
+            <div class="col-md-12 col-lg-6">
+              I created a one-to-one implementation of the UI and UX. I
+              developed and enhanced various internal features, limited to
+              employees.
+            </div>
             <!-- .col -->
             <ng-template
               ngFor
@@ -481,9 +489,9 @@
           </div>
           <!-- .row -->
         </div>
-        <!-- .sub-section -->
+        <!-- .content -->
       </div>
-      <!-- .content -->
+      <!-- .sub-section -->
     </mat-card>
   </section>
   <!-- #projects -->
@@ -508,15 +516,104 @@
             <span>June 2017 to August 2020</span>
           </div>
           <!-- sub-section-header -->
-          <h4>Front-end Developer</h4>
-          <div>
-            Front-end Developer where I created and maintained various Angular
-            applications using TypeScript, JS, ES6, NgRx, Redux, Material
-            Design, PrimeNG, etc. These applications assist geneticists in
-            making breeding decisions, which improve farmers' cattle genetics.
+          <div class="sub-section-header">
+            <h4>Front-end Developer</h4>
+            <h4>
+              Acquired
+              <a href="http://www.accelgen.com" target="_blank"
+                >Accelerated Genetics</a
+              >
+            </h4>
           </div>
+          <!-- sub-section-header -->
+          <p>
+            Created and maintained various Angular applications. These
+            applications assist geneticists in making breeding decisions, which
+            improve farmers' cattle genetics.
+          </p>
+          <ul>
+            <li>
+              Incumbent with creating and maintaining Angular web-applications
+              for, but not limited to:
+              <ul>
+                <li>
+                  <a
+                    href="https://bull-search-web-dev.azurewebsites.net"
+                    target="_blank"
+                    >Bull Search Web</a
+                  >
+                </li>
+                <li>
+                  <a href="http://search.accelgen.com" target="_blank"
+                    >Sire Search</a
+                  >
+                </li>
+                <li>
+                  <a href="https://dss.selectsires.com/" target="_blank"
+                    >Dairy Sire Search</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li>
+              Employed various skills including:
+              <ul>
+                <li>
+                  <a href="https://angular.io" target="_blank">Angular</a>
+                </li>
+                <li>
+                  <a href="https://www.typescriptlang.org" target="_blank"
+                    >TypeScript</a
+                  >
+                </li>
+                <li>
+                  <a href="https://www.javascript.com" target="_blank"
+                    >JavaScript</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="http://www.ecma-international.org/ecma-262/6.0"
+                    target="_blank"
+                    >ES6</a
+                  >
+                </li>
+                <li><a href="https://sass-lang.com">SCSS</a>/CSS3</li>
+                <li><a href="https://ngrx.io" target="_blank">NgRx</a></li>
+                <li>
+                  <a href="https://redux.js.org" target="_blank">Redux</a>
+                </li>
+                <li>
+                  <a href="https://material.angular.io" target="_blank"
+                    >Material Design</a
+                  >
+                </li>
+                <li>
+                  <a href="https://getbootstrap.com/" target="_blank"
+                    >Bootstrap</a
+                  >
+                </li>
+                <li>
+                  <a href="https://www.primefaces.org/primeng" target="_blank"
+                    >PrimeNG</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li>
+              Responsible for front-end development, website optimization, and
+              security
+            </li>
+            <li>
+              Developed tools for systems and employees to generate automated
+              reporting
+            </li>
+          </ul>
         </div>
         <!-- .sub-section -->
+      </div>
+      <!-- .content -->
+      <div class="content bg-off-white">
         <div class="sub-section">
           <div class="sub-section-header">
             <span
@@ -531,48 +628,76 @@
           </div>
           <!-- sub-section-header -->
           <h4>Full-Stack Web Developer</h4>
-          <div>
-            <ul>
-              <li>
-                Incumbent with creating, managing and maintaining IIS websites,
-                web-applications, and web services for, but not limited to,
-                <a href="https://www.accelgen.com" target="_blank"
-                  >www.accelgen.com</a
-                >
-              </li>
-              <li>
-                Leverage CMS employing various skills such as ASP.NET Web Forms,
-                C#, SQL, JavaScript/jQuery, Bootstrap, and SCSS/CSS
-              </li>
-              <li>
-                Maintain and optimize SQL Server databases to create, maintain,
-                and execute data upload scripts to handle weekly, monthly, and
-                triannual data uploads
-              </li>
-              <li>
-                Develop tools for systems and employees to generate automated
-                reporting
-              </li>
-              <li>
-                Front end development – employed bootstrap and JavaScript to
-                create a clear, impactful presentation
-              </li>
-              <li>
-                Responsible for back end development, website optimization and
-                security
-              </li>
-              <li>
-                Employed project management skills to manage specific
-                priorities, set deadlines, and adhere to budget constraints
-              </li>
-              <li>
-                Successfully developed and launched the ecommerce portal:
-                <a href="https://shop.accelgen.com" target="_blank"
-                  >shop.accelgen.com</a
-                >
-              </li>
-            </ul>
-          </div>
+          <ul>
+            <li>
+              Incumbent with creating, managing, and maintaining IIS websites,
+              web-applications, and web services for, but not limited to:
+              <ul>
+                <li>
+                  <a href="https://www.accelgen.com" target="_blank"
+                    >Accelerated Genetics</a
+                  >
+                </li>
+                <li>
+                  <a href="https://shop.accelgen.com" target="_blank"
+                    >Shop - Accelerated Genetics</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li>
+              Employed various skills including:
+              <ul>
+                <li>ASP.NET</li>
+                <li>C#</li>
+                <li>SQL</li>
+                <li>
+                  <a href="https://www.javascript.com" target="_blank"
+                    >JavaScript</a
+                  >
+                </li>
+                <li><a href="https://sass-lang.com">SCSS</a>/CSS3</li>
+                <li>
+                  <a href="https://getbootstrap.com/" target="_blank"
+                    >Bootstrap</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li>
+              Maintained and optimized SQL Server databases to create, maintain,
+              and execute data upload scripts to handle weekly, monthly, and
+              triannual data uploads
+            </li>
+            <li>
+              Front end development – employed Bootstrap and JavaScript to
+              create a clear, impactful presentation
+            </li>
+            <li>
+              Responsible for back end development, website optimization and
+              security
+            </li>
+            <li>
+              Successfully redesigned
+              <a href="http://www.accelgen.com" target="_blank"
+                >Accelerated Genetics</a
+              >
+            </li>
+            <li>
+              Successfully developed and launched the ecommerce web-application
+              <a href="https://shop.accelgen.com" target="_blank"
+                >Shop - Accelerated Genetics</a
+              >
+            </li>
+            <li>
+              Employed project management skills to manage specific priorities,
+              set deadlines, and adhere to budget constraints
+            </li>
+            <li>
+              Develop tools for systems and employees to generate automated
+              reporting
+            </li>
+          </ul>
         </div>
         <!-- .sub-section -->
       </div>
@@ -587,9 +712,9 @@
         [title]="'Education'"
         [titleBlurb]="'Formal Training'"
       ></app-section-header>
-      <div class="content">
-        <div class="row">
-          <div class="col-6">
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <div class="content">
             <div class="sub-section">
               <div class="sub-section-header">
                 <span
@@ -611,8 +736,11 @@
             </div>
             <!-- .sub-section -->
           </div>
-          <!-- .col -->
-          <div class="col-6">
+          <!-- .content -->
+        </div>
+        <!-- .col -->
+        <div class="col-sm-12 col-md-6">
+          <div class="content bg-off-white">
             <div class="sub-section">
               <div class="sub-section-header">
                 <span
@@ -637,10 +765,11 @@
             </div>
             <!-- .sub-section -->
           </div>
-          <!-- .col -->
+          <!-- .content -->
         </div>
+        <!-- .col -->
       </div>
-      <!-- .content -->
+      <!-- .row -->
     </mat-card>
   </section>
   <!-- #education -->
