--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -122,7 +122,7 @@ nav.desktop {
   text-align: center;
 
   img {
-    border: 1px solid var(--off-white);
+    border: 1px solid var(--white-smoke);
     cursor: pointer;
     margin-bottom: 15px;
     max-height: 300px;
