--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -2,7 +2,8 @@
   --primary: rgb(34, 179, 235);
   --secondary: rgb(85, 197, 240);
   --white: rgb(255, 255, 255);
-  --off-white: #f5f5f5;
+  --off-white: #f9f9f9;
+  --white-smoke: #f5f5f5;
   --black: rgb(0, 0, 0);
   --dark-gray: #333;
   --gray: #3d3d3d;
