--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -152,14 +152,14 @@ section {
     padding-top: 98px;
   }
 
-  .sub-section {
+  .subsection {
     margin-bottom: 40px;
 
     &:last-child {
       margin-bottom: 0;
     }
 
-    .sub-section-header {
+    .subsection-header {
       display: flex;
       justify-content: space-between;
 
