--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -162,7 +162,7 @@
         [titleBlurb]="'What I Have To Offer'"
       ></app-section-header>
       <div class="content">
-        <div class="sub-section">
+        <div class="subsection">
           <div class="row">
             <div class="col"><h2>Front-End</h2></div>
           </div>
@@ -193,9 +193,9 @@
           </div>
           <!-- .row -->
         </div>
-        <!-- .sub-section -->
+        <!-- .subsection -->
 
-        <div class="sub-section">
+        <div class="subsection">
           <div class="row">
             <div class="col"><h2>Libraries</h2></div>
           </div>
@@ -226,9 +226,9 @@
           </div>
           <!-- .row -->
         </div>
-        <!-- .sub-section -->
+        <!-- .subsection -->
 
-        <div class="sub-section">
+        <div class="subsection">
           <div class="row">
             <div class="col"><h2>Miscellaneous</h2></div>
           </div>
@@ -259,7 +259,7 @@
           </div>
           <!-- .row -->
         </div>
-        <!-- .sub-section -->
+        <!-- .subsection -->
       </div>
       <!-- .content -->
     </mat-card>
@@ -272,7 +272,7 @@
         [title]="'Projects'"
         [titleBlurb]="'Web Apps I\'ve worked on'"
       ></app-section-header>
-      <div class="sub-section">
+      <div class="subsection">
         <div class="content">
           <h2>
             <a
@@ -328,8 +328,8 @@
         </div>
         <!-- .content -->
       </div>
-      <!-- .sub-section -->
-      <div class="sub-section">
+      <!-- .subsection -->
+      <div class="subsection">
         <div class="content bg-off-white">
           <h2>
             <a href="http://www.accelgen.com" target="_blank"
@@ -374,8 +374,8 @@
         </div>
         <!-- .content -->
       </div>
-      <!-- .sub-section -->
-      <div class="sub-section">
+      <!-- .subsection -->
+      <div class="subsection">
         <div class="content">
           <h2>
             <a href="http://search.accelgen.com" target="_blank">Sire Search</a>
@@ -418,8 +418,8 @@
         </div>
         <!-- .content -->
       </div>
-      <!-- .sub-section -->
-      <div class="sub-section">
+      <!-- .subsection -->
+      <div class="subsection">
         <div class="content bg-off-white">
           <h2>
             <a href="https://shop.accelgen.com" target="_blank">Shop</a>
@@ -457,8 +457,8 @@
         </div>
         <!-- .content -->
       </div>
-      <!-- .sub-section -->
-      <div class="sub-section">
+      <!-- .subsection -->
+      <div class="subsection">
         <div class="content">
           <h2>
             <a href="https://dss.selectsires.com/" target="_blank"
@@ -491,7 +491,7 @@
         </div>
         <!-- .content -->
       </div>
-      <!-- .sub-section -->
+      <!-- .subsection -->
     </mat-card>
   </section>
   <!-- #projects -->
@@ -503,8 +503,8 @@
         [titleBlurb]="'Experience'"
       ></app-section-header>
       <div class="content">
-        <div class="sub-section">
-          <div class="sub-section-header">
+        <div class="subsection">
+          <div class="subsection-header">
             <span
               ><h2>
                 <a href="http://www.selectsires.com" target="_blank"
@@ -515,8 +515,8 @@
             </span>
             <span>June 2017 to August 2020</span>
           </div>
-          <!-- sub-section-header -->
-          <div class="sub-section-header">
+          <!-- subsection-header -->
+          <div class="subsection-header">
             <h4>Front-end Developer</h4>
             <h4>
               Acquired
@@ -525,7 +525,7 @@
               >
             </h4>
           </div>
-          <!-- sub-section-header -->
+          <!-- subsection-header -->
           <p>
             Created and maintained various Angular applications. These
             applications assist geneticists in making breeding decisions, which
@@ -610,12 +610,12 @@
             </li>
           </ul>
         </div>
-        <!-- .sub-section -->
+        <!-- .subsection -->
       </div>
       <!-- .content -->
       <div class="content bg-off-white">
-        <div class="sub-section">
-          <div class="sub-section-header">
+        <div class="subsection">
+          <div class="subsection-header">
             <span
               ><h2>
                 <a href="https://www.accelgen.com" target="_blank"
@@ -626,7 +626,7 @@
             </span>
             <span>January 2015 to May 2017</span>
           </div>
-          <!-- sub-section-header -->
+          <!-- subsection-header -->
           <h4>Full-Stack Web Developer</h4>
           <ul>
             <li>
@@ -699,7 +699,7 @@
             </li>
           </ul>
         </div>
-        <!-- .sub-section -->
+        <!-- .subsection -->
       </div>
       <!-- .content -->
     </mat-card>
@@ -715,8 +715,8 @@
       <div class="row">
         <div class="col-sm-12 col-md-6">
           <div class="content">
-            <div class="sub-section">
-              <div class="sub-section-header">
+            <div class="subsection">
+              <div class="subsection-header">
                 <span
                   ><h2>
                     <a href="https://www.udacity.com" target="_blank"
@@ -726,7 +726,7 @@
                 >
                 <span>June 2019 to October 2019</span>
               </div>
-              <!-- .sub-section-header -->
+              <!-- .subsection-header -->
               <h4>Mobile Web Specialist, Nanodegree</h4>
               <ul>
                 <li>Dynamic & Offline Capable Web Apps</li>
@@ -734,15 +734,15 @@
                 <li>Web Accessibility</li>
               </ul>
             </div>
-            <!-- .sub-section -->
+            <!-- .subsection -->
           </div>
           <!-- .content -->
         </div>
         <!-- .col -->
         <div class="col-sm-12 col-md-6">
           <div class="content bg-off-white">
-            <div class="sub-section">
-              <div class="sub-section-header">
+            <div class="subsection">
+              <div class="subsection-header">
                 <span
                   ><h2>
                     <a href="https://www.blackhawk.edu" target="_blank"
@@ -752,7 +752,7 @@
                 >
                 <span>Graduated May 2014</span>
               </div>
-              <!-- .sub-section-header -->
+              <!-- .subsection-header -->
               <div class="justify-content-space-between">
                 <h4>
                   Associate of Applied Science - IT-Web Analyst/Programmer
@@ -763,7 +763,7 @@
                 <li *ngFor="let course of blackhawkCourses">{{ course }}</li>
               </ul>
             </div>
-            <!-- .sub-section -->
+            <!-- .subsection -->
           </div>
           <!-- .content -->
         </div>
