Fix typography issue

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,9 +56,9 @@
 
     <hr wmAnimate="fadeIn" delay="250ms" />
 
-    <h4 class="description" wmAnimate="fadeInDown" delay="500ms">
-      Front-End Developer
-    </h4>
+    <h3 class="description" wmAnimate="fadeInDown" delay="500ms">
+      Front-end Developer
+    </h3>
     <!-- .description -->
 
     <div class="cta">
