--- a/src/styles/components/_mat-menu.scss
+++ b/src/styles/components/_mat-menu.scss
@@ -17,6 +17,16 @@
           background-color: var(--primary);
         }
 
+        a {
+          color: var(--white);
+
+          &:hover,
+          &:active,
+          &:focus {
+            text-decoration: none;
+          }
+        }
+
         mat-icon {
           color: var(--white);
         }
