--- a/src/styles/base/_medias.scss
+++ b/src/styles/base/_medias.scss
@@ -1,5 +1,17 @@
 @import "../base/vars";
 
+@media (max-width: $xs) {
+  .screenshot img {
+    max-height: 220px;
+  }
+}
+
+@media (max-width: $lg) {
+  .screenshot img {
+    margin-top: 15px;
+  }
+}
+
 @media (min-width: $xxxl) {
   nav.mobile {
     display: none;
@@ -50,6 +62,21 @@
 
         &.active {
           background-color: var(--primary);
+        }
+
+        a {
+          align-items: center;
+          display: flex;
+          color: var(--white);
+          height: 100%;
+          justify-content: center;
+          width: 100%;
+
+          &:hover,
+          &:active,
+          &:focus {
+            text-decoration: none;
+          }
         }
       }
     }
