--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -544,8 +544,8 @@
           </p>
           <ul>
             <li>
-              Incumbent with creating and maintaining Angular web-applications
-              for, but not limited to:
+              Created and maintained Angular web-applications for, but not
+              limited to:
               <ul>
                 <li>
                   <a
@@ -641,8 +641,8 @@
           <h4>Full-Stack Web Developer</h4>
           <ul>
             <li>
-              Incumbent with creating, managing, and maintaining IIS websites,
-              web-applications, and web services for, but not limited to:
+              Created, managed, and maintained IIS websites, web-applications,
+              and web services for, but not limited to:
               <ul>
                 <li>
                   <a href="https://www.accelgen.com" target="_blank"
@@ -705,7 +705,7 @@
               set deadlines, and adhere to budget constraints
             </li>
             <li>
-              Develop tools for systems and employees to generate automated
+              Developed tools for systems and employees to generate automated
               reporting
             </li>
           </ul>
