Add border-top to nav to separate resume sections and contact/top

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
   >
     <span>Education</span>
   </button>
-  <button mat-menu-item>
+  <button mat-menu-item class="border-top">
     <a href="mailto:matt.blum@live.com">Contact</a>
   </button>
   <button
@@ -139,7 +139,7 @@
     >
       Education
     </li>
-    <li wmAnimate="fadeInRight" aos delay="1250ms">
+    <li class="border-top" wmAnimate="fadeInRight" aos delay="1250ms">
       <a href="mailto:matt.blum@live.com">Contact</a>
     </li>
     <li
