Update WEPB fallback

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,7 +60,7 @@
     <hr wmAnimate="fadeIn" delay="250ms" />
 
     <h3 class="description" wmAnimate="fadeInDown" delay="500ms">
-      Front-end Developer
+      Front end Developer
     </h3>
     <!-- .description -->
 
@@ -161,7 +161,7 @@
       <a href="#">Matt Blum</a>
     </h1>
     <h1 class="side-accent" wmAnimate="fadeInDown" aos delay="250ms">
-      <span><span class="top-accent">&nbsp;</span>Front-End Developer</span>
+      <span><span class="top-accent">&nbsp;</span>Front end Developer</span>
     </h1>
   </section>
   <!-- #header -->
@@ -175,7 +175,7 @@
       <div class="content">
         <div class="subsection">
           <div class="row">
-            <div class="col"><h2>Front-End</h2></div>
+            <div class="col"><h2>Front end</h2></div>
           </div>
           <!-- .row -->
           <div class="row">
@@ -528,7 +528,7 @@
           </div>
           <!-- subsection-header -->
           <div class="subsection-header">
-            <h4>Front-end Developer</h4>
+            <h4>Front end Developer</h4>
             <h4>
               Acquired
               <a href="http://www.accelgen.com" target="_blank"
@@ -612,7 +612,7 @@
               </ul>
             </li>
             <li>
-              Responsible for front-end development, website optimization, and
+              Responsible for Front end development, website optimization, and
               security
             </li>
             <li>
