--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,16 +21,13 @@ nav.desktop {
 
 .landing {
   align-items: center;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   color: var(--dark-gray);
   display: flex;
   flex-direction: column;
   height: 100vh;
   justify-content: center;
   margin: 0;
+  overflow: hidden;
   text-align: center;
 
   h1,
