--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -181,9 +181,17 @@ $accent-line-height: 76px;
 .webp .landing {
   background: linear-gradient(rgba(34, 179, 235, 0.1), rgba(85, 197, 240, 0.1)),
     url("../assets/images/landing/subtle.webp");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .no-webp .landing {
   background: linear-gradient(rgba(34, 179, 235, 0.1), rgba(85, 197, 240, 0.1)),
     url("../assets/images/landing/subtle.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
