Update WEBP fallback

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,13 +21,18 @@ nav.desktop {
 
 .landing {
   align-items: center;
+  background: linear-gradient(rgba(34, 179, 235, 0.1), rgba(85, 197, 240, 0.1)),
+    url("../assets/images/landing/subtle.webp");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   color: var(--dark-gray);
   display: flex;
   flex-direction: column;
   height: 100vh;
   justify-content: center;
   margin: 0;
-  overflow: hidden;
   text-align: center;
 
   h1,
