--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -180,5 +180,5 @@ $accent-line-height: 76px;
 
 .no-webp .landing {
   background: linear-gradient(rgba(34, 179, 235, 0.1), rgba(85, 197, 240, 0.1)),
-    url("../assets/images/landing/subtle.jpg");
+    url("../assets/images/landing/subtle.jpg") !important;
 }
