--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,7 +22,8 @@ nav.desktop {
 .landing {
   align-items: center;
   background: linear-gradient(rgba(34, 179, 235, 0.1), rgba(85, 197, 240, 0.1)),
-    url("../assets/images/landing/subtle.webp");
+    url("../assets/images/landing/subtle.jpg");
+  // url("../assets/images/landing/subtle.webp");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
