--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,12 +21,14 @@ nav.desktop {
 
 .landing {
   align-items: center;
-  background: linear-gradient(rgba(34, 179, 235, 0.1), rgba(85, 197, 240, 0.1)),
-    url("../assets/images/landing/subtle.jpg");
+  background: url("../assets/images/landing/subtle.jpg") no-repeat center center
+    fixed;
+  // background: linear-gradient(rgba(34, 179, 235, 0.1), rgba(85, 197, 240, 0.1)),
+  //   url("../assets/images/landing/subtle.jpg");
   // url("../assets/images/landing/subtle.webp");
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
+  // background-attachment: fixed;
+  // background-position: center;
+  // background-repeat: no-repeat;
   background-size: cover;
   color: var(--dark-gray);
   display: flex;
