--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,6 +30,7 @@ nav.desktop {
   // background-position: center;
   // background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
   color: var(--dark-gray);
   display: flex;
   flex-direction: column;
