--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -32,11 +32,12 @@ nav.desktop {
   background-size: cover;
   -webkit-background-size: cover;
   color: var(--dark-gray);
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
   height: 100vh;
-  justify-content: center;
+  // justify-content: center;
   margin: 0;
+  overflow: hidden;
   text-align: center;
 
   h1,
