--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,16 +26,16 @@ nav.desktop {
   // background: linear-gradient(rgba(34, 179, 235, 0.1), rgba(85, 197, 240, 0.1)),
   //   url("../assets/images/landing/subtle.jpg");
   // url("../assets/images/landing/subtle.webp");
-  // background-attachment: fixed;
-  // background-position: center;
-  // background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
   color: var(--dark-gray);
-  // display: flex;
-  // flex-direction: column;
+  display: flex;
+  flex-direction: column;
   height: 100vh;
-  // justify-content: center;
+  justify-content: center;
   margin: 0;
   overflow: hidden;
   text-align: center;
