--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -27,8 +27,11 @@ nav.desktop {
   //   url("../assets/images/landing/subtle.jpg");
   // url("../assets/images/landing/subtle.webp");
   background-attachment: fixed;
+  -webkit-background-attachment: fixed;
   background-position: center;
+  -webkit-background-position: center;
   background-repeat: no-repeat;
+  -webkit-background-repeat: no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
   color: var(--dark-gray);
@@ -38,6 +41,7 @@ nav.desktop {
   justify-content: center;
   margin: 0;
   overflow: hidden;
+  -webkit-overflow: hidden;
   text-align: center;
 
   h1,
