Troubleshooting Safari specific issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,12 +26,12 @@ nav.desktop {
   // background: linear-gradient(rgba(34, 179, 235, 0.1), rgba(85, 197, 240, 0.1)),
   //   url("../assets/images/landing/subtle.jpg");
   // url("../assets/images/landing/subtle.webp");
-  background-attachment: fixed;
-  -webkit-background-attachment: fixed;
-  background-position: center;
-  -webkit-background-position: center;
-  background-repeat: no-repeat;
-  -webkit-background-repeat: no-repeat;
+  // background-attachment: fixed;
+  // -webkit-background-attachment: fixed;
+  // background-position: center;
+  // -webkit-background-position: center;
+  // background-repeat: no-repeat;
+  // -webkit-background-repeat: no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
   color: var(--dark-gray);
