Troubleshoot Safari issue

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -179,5 +179,5 @@ $accent-line-height: 76px;
 }
 
 .no-webp .landing {
-  background-image: url("../assets/images/landing/subtle.jpg");
+  background-image: url("../assets/images/landing/subtle.jpg") !important;
 }
