--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,12 +22,11 @@ nav.desktop {
 .landing {
   align-items: center;
   background-image: url("../assets/images/landing/subtle.webp");
-  background-size: cover;
+  // background-size: cover;
   color: var(--dark-gray);
   display: flex;
   flex-direction: column;
   height: 100vh;
-  max-height: 100vh;
   justify-content: center;
   margin: 0;
   text-align: center;
