--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,7 +22,7 @@ nav.desktop {
 .landing {
   align-items: center;
   background-image: url("../assets/images/landing/subtle.webp");
-  // background-size: cover;
+  background-size: cover;
   color: var(--dark-gray);
   display: flex;
   flex-direction: column;
