Re-add !important flag

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -179,7 +179,7 @@ $accent-line-height: 76px;
 }
 
 .no-webp .landing {
-  background-image: url("../assets/images/landing/subtle.jpg");
+  background-image: url("../assets/images/landing/subtle.jpg") !important;
 }
 
 // Safari 100vh fix
