Re-add !important flag

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -185,6 +185,6 @@ $accent-line-height: 76px;
 // Safari 100vh fix
 @supports (-webkit-touch-callout: none) {
   .landing {
-    height: -webkit-fill-available;
+    height: -webkit-fill-available !important;
   }
 }
